# DL-from-scratch

./: Back_propagation_from_scratch.ipynb
MLP for XOR/: Back_propagation_from_scratch.ipynb  README.md
NNFS/: .gitignore  README.md  banners.py  main.py  pyproject.toml
NNFS/Models/: fashion_mnist_model.pickle  fashion_mnist_model_params.pickle
NNFS/accuracy/: accuracy.py  classification.py  regression.py
NNFS/activation/: linear.py  relu.py  sigmoid.py  softmax.py
NNFS/data/: data.py
NNFS/layers/: dense.py  dropout.py  input.py
NNFS/loss/: classification.py  combined.py  loss.py  regression.py
NNFS/model/: model.py
NNFS/optimizer/: adagrad.py  adam.py  rmsprop.py  sgd.py
