[project]
name = "nnfs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.90",
    "pyfiglet>=1.0.4",
    "python-dotenv>=1.2.1",
    "tqdm>=4.67.2",
    "nnfs>=0.5.1",
]
